--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- 配置页签图标 -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.css">
     <!-- 配置网页标题 -->
     <title><%= htmlWebpackPlugin.options.title %></title>
+
   </head>
   <body>
     <!-- 当浏览器不支持js时，noscript中的元素就会被渲染 -->
